<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/OTG_confirm"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnMonitorConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_usb_monitor"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnIRDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/nav_ir_display"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnImageTempDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nav_ir_image_or_temp_display"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnTools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/nav_tools"
        android:textAllCaps="false" />

</LinearLayout>