<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:keepScreenOn="true">

    <com.infisense.usbir.view.CameraView
        android:id="@+id/cameraView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/llDataFlowMode"
        android:layout_above="@+id/llPreviewControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnImageTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_image_temp" />

        <Button
            android:id="@+id/btnImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_image" />

        <Button
            android:id="@+id/btnTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_temp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPreviewControl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnStopYUV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="停YUV图" />

        <Button
            android:id="@+id/btnStartYUV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="出YUV图" />

        <Button
            android:id="@+id/btnStopY16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="停Y16图" />

        <Button
            android:id="@+id/btnStartY16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="出Y16图" />

    </LinearLayout>

</RelativeLayout>