<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:keepScreenOn="true">

    <!-- top title -->
    <LinearLayout
        android:id="@+id/controlToolBar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/pseudocolorModeButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:lines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/pseudo_mode"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/temperatureButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:lines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/temperature"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/calibration"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:lines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/calibration"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/imageProcess"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:lines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/image"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/more"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:lines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/information"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/others"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:lines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/top_menu_other"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <!-- 中间部分 -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/imageToolBar"
        android:layout_below="@id/controlToolBar">

        <!-- 红外出图图层 -->
        <com.infisense.usbir.view.CameraView
            android:id="@+id/cameraView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!-- 温度图层 -->
        <com.infisense.usbir.view.TemperatureView
            android:id="@+id/temperatureView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <!-- bottom menu -->
    <LinearLayout
        android:id="@+id/imageToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <!-- 打快门，出图后模糊可以手动打快门 -->
        <ImageView
            android:id="@+id/manualShutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/shut"
            android:foreground="?selectableItemBackground" />

        <!-- 打背景 -->
        <ImageView
            android:id="@+id/btnShutterStatusSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/shut_on"
            android:foreground="?selectableItemBackground" />

        <!-- 快门开合 -->
        <ToggleButton
            android:id="@+id/shutterSwitch"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:textAllCaps="false"
            android:textOff="Shutter Off"
            android:textOn="Shutter On" />

        <!-- 拍照 -->
        <ImageView
            android:id="@+id/captureImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/photo"
            android:foreground="?selectableItemBackground" />

        <!-- 录像 -->
        <ImageView
            android:id="@+id/recordVideoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:background="@drawable/video"
            android:foreground="?selectableItemBackground" />

    </LinearLayout>

</RelativeLayout>